--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "wrangler dev --local"
+    "dev": "wrangler dev --local --experimental-vectorize-bind-to-prod"
   },
   "dependencies": {
-    "@cloudflare/workers-types": "^4.20250510.0",
-    "hono": "^4.7.9"
+    "@hono/zod-validator": "^0.5.0",
+    "hono": "^4.7.9",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250510.0",
     "typescript": "^5.8.3",
     "wrangler": "^4.14.4"
   }
