--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,24 @@
-name = "my-backend"
+name = "myth-backend"
 compatibility_date = "2023-08-01"
 main = "src/index.ts"
+
+routes = [
+  { pattern = "myth-api.mxsyx.site", custom_domain = true }
+]
+
+[[r2_buckets]]
+binding = "R2_ASSETS"
+bucket_name = "myth-assets"
+preview_bucket_name="myth-assets"
+
+[[r2_buckets]]
+binding = "R2_ASSETS_TMP"
+bucket_name = "myth-assets-tmp"
+preview_bucket_name="myth-assets-tmp"
+
+[ai]
+binding = "AI" 
+
+[[vectorize]]
+binding = "VECTORIZE"
+index_name = "myth-assets"
