--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "wrangler dev --local --experimental-vectorize-bind-to-prod"
+    "dev": "wrangler dev --local"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.5.0",
+    "@qdrant/js-client-rest": "^1.14.0",
     "hono": "^4.7.9",
     "zod": "^3.24.4"
   },
