--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "wrangler dev --local"
+    "dev": "wrangler dev --remote"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.5.0",
